--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
                     <a href="skills.html">Skills</a>
                     <a href="#">Portfolio</a>
                 </nav>
+               <a href="contact.html">
                 <button class="header__btn">
                     CONTACT ME
                 </button>
+               </a>
             </div>
             <div class="header__main">
                 <div class="line__top">
@@ -125,7 +127,7 @@
                     </div>
                     <div class="footer__contact">
                         <h1>Contact us:</h1>
-                        <button>CONTACT</button>
+                        <a href="contact.html"><button>CONTACT</button></a>
                     </div>
                 </div>
                 <div class="footer__note">
