--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <title>My-portfolio</title>
 </head>
 <body>
-   <div class="wrap">
+    <div class="wrap">
         <header class="container">
             <div class="header__menu">
                 <nav>
@@ -21,61 +21,25 @@
                     <a href="skills.html">Skills</a>
                     <a href="#">Portfolio</a>
                 </nav>
-                <a href="contact.html">
-                    <button class="header__btn">
-                        CONTACT ME
-                    </button>
+               <a href="contact.html">
+                <button class="header__btn">
+                    CONTACT ME
+                </button>
                 </a>
             </div>
         </header>
-        <section class="using container">
-            <h1>USING NOW:</h1>
-            <div class="using__img">
-                <div class="using__cards">
-                    <img src="image/html.svg" alt="">
-                    <p>HTML5</p>
+        <section class="inputs container">
+            <div class="contact__main">
+                <div class="inputs__menu">
+                    <input type="text" placeholder="ENTER YOUR NAME*">
+                    <input type="number" placeholder="ENTER YOUR AGE*">
+                    <input type="number" placeholder="PHONE NUMBER">
+                    <input type="text" placeholder="YOUR MASSAGE*">
                 </div>
-                <div class="using__cards">
-                    <img src="image/css.svg" alt="">
-                    <p>CSS3</p>
-                </div>
-                <div class="using__cards">
-                    <img src="image/js.svg" alt="">
-                    <p>JAVASCRIPT</p>
-                </div>
-                <div class="using__cards">
-                    <img src="image/react.svg" alt="">
-                    <p>REACT</p>
-                </div>
-                <div class="using__cards">
-                    <img src="image/git.svg" alt="">
-                    <p>GIT</p>
-                </div>
-                <div class="using__cards">
-                    <img src="image/figma.svg" alt="">
-                    <p>FIGMA</p>
+                <div class="contact__pick">
+                    <img src="image/pick.jpg" alt="myPick">
                 </div>
             </div>
-            <div class="learning">
-                <h1>LEARNING:</h1>
-            </div>
-            <div class="using__img">
-                <div class="using__cards">
-                    <img src="image/ts.svg" alt="ts">
-                    <p>TYPESCRIPT</p>
-                </div>
-                <div class="using__cards">
-                    <img src="image/mysql.svg" alt="mysql">
-                    <p>MYSQL</p>
-                </div>
-                <div class="using__cards">
-                    <img src="image/english.svg" alt="english">
-                    <p>ENGLISH</p>
-                </div>
-            </div>
-        </section>
-        <section class="line__block container">
-
         </section>
         <footer class="container">
             <div class="footer__main">
@@ -116,6 +80,6 @@
                 <p>© 2025   Ro'zmetov Ismoil. <span>"This portfolio is one of myfirst steps towardbig dreams".</span></p>
             </div>
         </footer>
-   </div>
+    </div>
 </body>
 </html>
