--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                 <nav>
                     <a href="index.html">About me</a>
                     <a href="skills.html">Skills</a>
-                    <a href="#">Portfolio</a>
+                    <a href="portfolio.html">Portfolio</a>
                 </nav>
                <a href="contact.html">
                 <button class="header__btn">
@@ -57,7 +57,7 @@
                         <a href="https://github.com/ismoilrz">
                             <img src="image/1git.jpg" alt="git">
                         </a>
-                        <a href="+998948536747">
+                        <a href="tel:+998948536747">
                             <img src="image/1call.jpg" alt="phone">
                         </a>
                     </div>
@@ -67,7 +67,7 @@
                     <span>
                         <a href="index.html"><p>About me</p></a>
                         <a href="skills.html"><p>Skills</p></a>
-                        <a href=""><p>Portfolio</p></a>
+                        <a href="portfolio.html"><p>Portfolio</p></a>
                     </span>
                     
                 </div>
