--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
                 <nav>
                     <a href="index.html">About me</a>
                     <a href="skills.html">Skills</a>
-                    <a href="#">Portfolio</a>
+                    <a href="portfolio.html">Portfolio</a>
                 </nav>
                <a href="contact.html">
                 <button class="header__btn">
                     CONTACT ME
                 </button>
                </a>
+            </div>
+
+            <div class="burger__menu" id="burger__menu">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
             <div class="header__main">
                 <div class="line__top">
@@ -70,7 +76,7 @@
                     </a>
                 </div>
                 <div class="platform">
-                        <a href="+998948536747">
+                        <a href="tel:+998948536747">
                               <img src="image/phone.jpg" alt="phonePick">
                               <p>+998 94 853 67 47</p>
                         </a>
@@ -111,7 +117,7 @@
                             <a href="https://github.com/ismoilrz">
                                 <img src="image/1git.jpg" alt="git">
                             </a>
-                            <a href="+998948536747">
+                            <a href="tel:+998948536747">
                                 <img src="image/1call.jpg" alt="phone">
                             </a>
                         </div>
@@ -121,7 +127,7 @@
                         <span>
                             <a href="index.html"><p>About me</p></a>
                             <a href="skills.html"><p>Skills</p></a>
-                            <a href=""><p>Portfolio</p></a>
+                            <a href="portfolio.html"><p>Portfolio</p></a>
                         </span>
                         
                     </div>
@@ -135,5 +141,6 @@
                 </div>
             </footer>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
